# AI-STUDY-HOME

./: README.md
geektime-projects/w2/db_query/: .gitignore  CLAUDE.md  Makefile  README.md  TEST_REPORT.md  create-issues.sh
geektime-projects/w2/db_query/backend/: README.md  check_imports.py  pyproject.toml
geektime-projects/w2/db_query/backend/app/: config.py  main.py
geektime-projects/w2/db_query/backend/app/adapters/: base.py  mysql.py  postgresql.py  registry.py
geektime-projects/w2/db_query/backend/app/api/v1/: databases.py  queries.py
geektime-projects/w2/db_query/backend/app/core/: db.py  security.py  sql_parser.py
geektime-projects/w2/db_query/backend/app/models/: database.py  errors.py  metadata.py  query.py
geektime-projects/w2/db_query/backend/app/services/: database_service.py  llm_service.py  metadata_service.py  query_service.py
geektime-projects/w2/db_query/backend/app/utils/: logging.py
geektime-projects/w2/db_query/backend/scripts/: __init__.py  db_utils.py  init_db.py
geektime-projects/w2/db_query/backend/tests/: conftest.py
geektime-projects/w2/db_query/backend/tests/integration/: test_api_endpoints.py
geektime-projects/w2/db_query/backend/tests/unit/: test_config.py  test_sql_parser.py
geektime-projects/w2/db_query/fixtures/: README.md  test.rest
geektime-projects/w2/db_query/frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
geektime-projects/w2/db_query/specs/: instructions.md
geektime-works/db_query/: CLAUDE.md  PHASE3_IMPLEMENTATION.md  README.md  TEST_REPORT.md  start.sh  stop.sh
geektime-works/db_query/backend/: README.md  debug_db_connection.py  pyproject.toml  ruff.toml
geektime-works/db_query/backend/app/: config.py  main.py
geektime-works/db_query/backend/tests/: test_ai_export_intent.py  test_ai_proactive_suggestion.py  test_ai_response_tracking.py  test_api_ai_export.py  test_api_export.py  test_export_constraints.py  test_export_csv.py  test_export_json.py  test_export_size_estimation.py
geektime-works/db_query/docs/: ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  CLASS_DIAGRAM.md  IMPLEMENTATION_GUIDE.md  MYSQL_SUPPORT.md  QUICK_REFERENCE.md  README.md
geektime-works/db_query/frontend/: .gitignore  MONACO_NETWORK_SETUP.md  README.md  eslint.config.js  index.html  tsconfig.json  vite.config.ts
geektime-works/db_query/frontend/scripts/: setup-monaco-local.sh
geektime-works/db_query/frontend/tests/: app.test.tsx  setup.ts
geektime-works/pg-mcp/: pyproject.toml
geektime-works/pg-mcp/docs/: model-defects-fix-report.md  model-defects-validation-report.md  resilience-observability-validation-report.md  security-validation-report.md  test-failures-analysis.md  test-fixes-completion-report.md  unit-test-adjustment-analysis.md
specs/001-fix-setup-tests/: spec.md
specs/001-fix-setup-tests/checklists/: requirements.md
(+80 files in other folders)
