[project]
name = "db-query-backend"
version = "0.1.0"
description = "Database Query Tool - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "sqlglot[rs]>=28.5.0",
    "openai>=2.14.0",
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "aiomysql>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
exclude = ["migrations"]

[tool.ruff.per-file-ignores]
"app/services/llm_service.py" = ["E501"]  # Long Chinese error messages
"__init__.py" = ["F401"]
"app/adapters/registry.py" = ["E402"]  # Delayed imports for adapter registration
"app/main.py" = ["E402"]  # Delayed imports for router inclusion

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
warn_return_any = false
warn_unused_ignores = false
